--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,1 +1,20 @@
-nav.css
+nav#nav-bar {
+    position: relative;
+    height: 80px;
+    background-color: #00a087;
+    color: #e8fdff;
+    padding: 0 2em;
+}
+
+#nav-bar .logo {
+    height: 80px;
+    width: 80px;
+    float: left;
+}
+
+#nav-bar .header {
+    font-size: 200%;
+    padding-left: 10px;
+    float: left;
+    line-height: 250%;
+}
