--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,15 @@ body {
   background-color: #eee;
 }
 
+main {
+  width: 450px;
+  background-color: white;
+  margin: 50px auto 0px auto;
+  border: 10px solid;
+  text-align: center;
+
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
