--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,9 +1,13 @@
 section.new-tweet {
-    padding: 1em 2em;
+  padding: 1em 2em;
+  border-radius: 15px;
+  border: 1px solid;
+  background-color: lightgray;
+  margin: 5px;
 }
 
 span.counter {
-    float: right;
+  float: right;
 }
 
 textarea {
