--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -4,7 +4,16 @@ section.tweets {
   border: 1px solid;
   border-color: black;
   opacity: 0.6;
-  margin: 5px;
+  margin: 15px 5px;
+}
+
+section.tweets:hover {
+  width: 400px;
+  border-radius: 15px;
+  border: 1px solid;
+  border-color: black;
+  opacity: 1;
+  margin: 15px 5px;
 }
 
 header {
@@ -23,6 +32,24 @@ header:after {
 footer {
   border-top: 1px solid;
   padding: 0 0.5em;
+}
+
+footer p:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+footer i {
+  float: right;
+  opacity: 0;
+  padding: 0.15em;
+}
+
+section.tweets:hover footer i {
+  float: right;
+  opacity: 1;
+  padding: 0.15em;
 }
 
 section h6 {
@@ -46,4 +73,8 @@ section h6 {
   font-size: 150%;
   padding-left: 10px;
   line-height: 300%;
+}
+
+.icons {
+  float: right;
 }
