--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,9 +1,9 @@
 section.new-tweet {
-  padding: 1em 2em;
+  padding: 1em 1.75em;
   border-radius: 15px;
   border: 1px solid;
   background-color: lightgray;
-  margin: 5px;
+  margin: 0.3em;
 }
 
 span.counter {
